<resources>
    <string name="app_name">Bus Arrival @ SG</string>
    <string name="title_activity_list_all_bus_stops">List All Bus Stops</string>
    <string name="title_activity_add_bus_stops">Bus Stops</string>
    <string name="title_activity_bus_services_at_stop">BusServicesAtStop</string>
    <string name="invalid_activity_access">Invalid Access to Activity. Exiting…</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_all_bus_stops">View All Bus Stops</string>
    <string name="action_refresh_fav">Refresh Favourites</string>
    <string name="action_refresh">Refresh</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_bus_stop_name">Bus Stop Name</string>
    <string name="label_road_name_code">Road Name (Code)</string>
    <string name="label_bus_service_placeholder">184</string>
    <string name="label_time_placeholder">-</string>
    <string name="label_bus_type_placeholder">Normal</string>
    <string name="label_bus_operator_placeholder">SMRT</string>
    <string name="label_bus_status_placeholder">Status Unknown</string>
    <string name="label_bus_stop_name_placeholder">Bus Stop Name</string>
    <string name="label_favourites">Favourites</string>
    <string name="feature_coming_soon">Soon</string>
    <string name="link_updates">https://github.com/itachi1706/SingBuses/releases/latest</string>
    <string name="link_legacy">https://github.com/itachi1706/SingBuses/releases</string>
    <string name="link_pebble_app">http://itachi1706.com/android/SingBuses.pbw</string>
    <string name="dialog_title_permission_denied">Permission has been denied</string>
    <string name="dialog_message_no_permission_gps">You have denied the app access to your phone\'s location. We are unable to determine your location as a result.\n\nIf you wish to grant the app permissions right now, click the settings button and grant it permissions there</string>
    <string name="dialog_title_request_permission_gps">Requesting GPS Permission</string>
    <string name="dialog_message_request_permission_gps_rationale">In order for the app to retrieve your current position to find bus stops near you, it requires access to your Location. Please grant it in the next screen to use it</string>
    <string name="dialog_message_request_permission_gps_view_map_rationale">In order for the app to retrieve your current position to place a marker on the map, it requires access to your Location. Please grant it in the next screen to use it</string>
    <string name="dialog_message_no_permission_external_storage">You have denied the app access to your phone\'s storage. Due to the fact that installing the companion Pebble app requires you to use the Official Pebble App for installation, the app needs to save the Pebble App File onto your internal storage. By denying this permission, install cannot proceed as the Official Pebble App will not be able to access this app\'s private storage (which would not have required this permission).\n\nIf you wish to grant the app permissions right now, click the settings button and grant it permissions there</string>
    <string name="dialog_title_request_permission_external_storage">Requesting External Storage Permission</string>
    <string name="dialog_message_request_permission_external_storage_rationale">In order for the app to download the Pebble App File for the Official Pebble App to install, we require permission to write to your storage.</string>
    <string name="pref_summary_pebble_background_svc">Enables background service so that you do not need to have this app open when you use the pebble application. (Note: This might have an impact on your battery life)</string>
    <string name="database_name_bus_geo">Bus Geographical Database</string>
    <string name="database_name_bus">Bus Database</string>
    <string name="label_bus_stops_count">Bus Stops Count: %1$d</string>
    <string name="edittext_hint_search_bus_stop">Stop Code/Stop Name/Road Name</string>
    <string name="content_description_wheelchair">Wheelchair Supported Bus</string>
    <string name="service_operational">In Operation</string>
    <string name="service_not_operational">Not In Operation</string>
    <string name="maps_marker_bus_location_title">Current Bus Location</string>
    <string name="maps_marker_bus_location_snippet">Current Bus Location as on this data</string>
    <string name="maps_marker_bus_stop_snippet">Current bus stop</string>
    <string name="maps_marker_bus_stop_title">Bus Stop</string>
    <string name="notification_title_exception_download">Exception Occurred (Download)</string>
    <string name="notification_ticker_download_fail">Download failed</string>
    <string name="notification_content_download_fail_exception">An exception occurred while downloading the update file. (%1$s)</string>
    <string name="notification_content_download_fail_exception_expanded">An exception occurred while downloading the update file. (%1$s)\n Click to manually download the file</string>
    <string name="notification_content_download_fail">The update is unable to download automatically</string>
    <string name="notification_content_download_fail_expanded">The update is unable to download automatically.\n Click to manually download the file</string>
    <string name="notification_title_download_success">Download Complete</string>
    <string name="notification_ticker_download_success">Download Complete!</string>
    <string name="notification_content_download_success">Update has been successfully downloaded</string>
    <string name="notification_title_starting_download">Downloading new update</string>
    <string name="notification_content_starting_download">Downloading new update…</string>
    <string name="notification_ticker_starting_download">Downloading new update to the app</string>
    <string name="dialog_action_neutral_app_settings">APP SETTINGS</string>
    <string name="dialog_action_neutral_override">Override</string>
    <string name="dialog_action_positive_settings">Settings</string>
    <string name="dialog_action_negative_cancel">Cancel</string>
    <string name="dialog_action_positive_close">Close</string>
    <string name="snackbar_action_dismiss">DISMISS</string>
    <string name="fab_hint_main_menu">Add a bus service into favourites</string>
    <string name="hint_add_bus_to_fav">Long click on an individual bus service to add/remove it from favourites!</string>
    <string name="progress_title_bus_stop_data_parse_pre">Parsing Bus Stops Data</string>
    <string name="progress_message_bus_stop_data_parse_pre">Parsing bus stops data…</string>
    <string name="progress_title_bus_stop_data_download">Downloading Bus Stop Data</string>
    <string name="progress_message_bus_stop_data_download">This will take a few minutes. Be patient :) \nDownloading latest bus stop data</string>
    <string name="progress_message_bus_stop_data_parse">Parsing bus stops data…\nCurrent Stop: %1$s\n%2$s</string>
    <string name="dialog_message_latest_update">You are on the latest release! No update is required.</string>
    <string name="dialog_title_latest_update">Check for New Update</string>
    <string name="dialog_title_gps_disabled">GPS is disabled</string>
    <string name="dialog_message_gps_disabled">GPS is not enabled. Do you want to enable it for better accuracy?</string>
    <string name="dialog_message_remove_from_fav_with_stop_name">Are you sure you want to remove %1$s from %2$s (%3$s) from your favourites?</string>
    <string name="dialog_message_remove_from_fav">Are you sure you want to remove %1$s from Bus Stop Code %2$s from your favourites?</string>
    <string name="dialog_message_remove_from_fav_pebble">\n\nThis will also remove it from being accessible from your Pebble device</string>
    <string name="snackbar_message_remove_from_fav_with_stop_name">Swipe to remove %1$s or reorder it by moving it up and down</string>
    <string name="snackbar_message_remove_from_fav">Swipe to remove %1$s or reorder it by moving it up and down</string>
    <string name="dialog_title_remove_from_fav">Remove from Favourites</string>
    <string name="dialog_message_add_to_fav_with_stop_name">Are you sure you want to add %1$s from %2$s (%3$s) to your favourites?</string>
    <string name="dialog_message_add_to_fav">Are you sure you want to add %1$s from Bus Stop Code %2$s to your favourites?</string>
    <string name="dialog_message_add_to_fav_pebble">\n\nThis will also make it accessible from your Pebble device</string>
    <string name="dialog_title_add_to_fav">Add to Favourites</string>
    <string name="dialog_title_no_internet">No Internet Access</string>
    <string name="dialog_message_no_internet">Internet Access is required to populate %1$s, please ensure that you have internet access before relaunching this application</string>
    <string name="dialog_message_retrieve_data_from_server">Retrieving data from server</string>
    <string name="dialog_title_no_changelog">No Changelog</string>
    <string name="dialog_message_no_changelog">No changelog was found. Please check if you can connect to the server</string>
    <string name="dialog_title_changelog">Changelog</string>
    <string name="dialog_title_retrieve_data_bus_service">Downloading Bus Service Data</string>
    <string name="dialog_message_retrieve_data_bus_service">Getting all Bus Services in Bus Stop %1$s</string>
    <string name="toast_message_add_to_fav">Added to favourites</string>
    <string name="toast_message_remove_from_fav">Removed from favourites</string>
    <string name="toast_message_invalid_json_string">Invalid JSON String</string>
    <string name="toast_message_retrieving_location">Getting your location…</string>
    <string name="toast_bus_stop_data_parse_success">%1$d bus stops saved to database!</string>
    <string name="toast_message_timeout_distance_api">Distance API did not respond after the period of time</string>
    <string name="toast_message_invalid_json">Invalid JSON. Please try again</string>
    <string name="toast_message_invalid_request">Invalid request. Please try again</string>
    <string name="toast_message_invalid_data">Something went wrong here, re-obtain your data</string>
    <string name="toast_message_invalid_bus_stop">Bus Stop not found in database, ignoring D:</string>
    <string name="toast_message_timeout_request">Request Timed Out</string>
    <string name="toast_message_invalid_json_retry">Invalid JSON String, Retrying</string>
    <string name="toast_message_timeout_request_retry">Request Timed Out, Retrying</string>
    <string name="toast_message_timeout_database_query_retry">Database query timed out. Retrying</string>
    <string name="toast_message_error_occurred">An error occurred please reload the application and try again</string>
    <string name="toast_message_unknown_error">Something weird occurred, Retrying</string>
    <string name="toast_cannot_contact_update_server">Unable to contact update server to check for updates</string>
    <string name="toast_cannot_check_update">Unable to do app update check</string>
    <string name="toast_message_latest_update">No update is required</string>
    <string name="dialog_title_bus_location_unavailable">Location Unavailable</string>
    <string name="dialog_message_bus_location_unavailable">Location of this bus is not available</string>
    <string name="dialog_title_bus_timing_unavailable">Bus Service Not In Operation</string>
    <string name="dialog_message_bus_timing_unavailable">No Bus Timings Found! The Bus Service may not be in operation right now!</string>
    <string name="title_activity_bus_location_maps">Map</string>
    <string name="static_search_label">Search for Bus Stop</string>
    <string name="static_search_long_label">Enter the search page directly</string>
    <string name="static_search_disabled_label">The Search Bus Stop shortcut is disabled</string>
</resources>