<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainMenu">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/view_all_stops" android:title="@string/action_view_all_bus_stops"
        android:orderInCategory="4" app:showAsAction="never" />
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh_fav"
        android:orderInCategory="3" android:icon="@drawable/ic_refresh" app:showAsAction="ifRoom" />
    <item android:id="@+id/scan_cepas" android:title="Scan CEPAS Card" android:orderInCategory="1"
        app:showAsAction="ifRoom" android:icon="@drawable/ic_scan_card"/>
    <item android:id="@+id/ntu_tracker" android:title="NTU Buses (BETA)" android:orderInCategory="2"
        app:showAsAction="ifRoom" android:icon="@drawable/ic_ntu_coa_bw"/>
</menu>
