<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeightLarge"
    android:padding="2dip"
    android:background="?android:selectableItemBackground">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_bus_service_placeholder"
        android:id="@+id/tvBusService"
        android:layout_below="@+id/tvBusOperator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@android:color/transparent"
        android:text="@string/label_time_placeholder"
        android:gravity="center"
        android:id="@+id/btnBusArrivalSub"
        android:layout_alignTop="@+id/btnBusArrivalNext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        style="?android:attr/buttonStyleSmall"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_time_placeholder"
        android:gravity="center"
        android:id="@+id/btnBusArrivalNext"
        android:layout_below="@+id/tvBusStatus"
        android:layout_toLeftOf="@+id/btnBusArrivalSub"
        android:layout_toStartOf="@+id/btnBusArrivalSub"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_bus_operator_placeholder"
        android:id="@+id/tvBusOperator"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_bus_status_placeholder"
        android:id="@+id/tvBusStatus"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnBusArrivalSub"
        android:layout_alignEnd="@+id/btnBusArrivalSub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/label_bus_stop_name_placeholder"
        android:id="@+id/tvBusStopName"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/tvBusStatus"
        android:layout_alignEnd="@+id/tvBusStatus"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivWheelchairNext"
        app:srcCompat="@drawable/wheelchair_accessibility_white"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/btnBusArrivalNext"
        android:layout_alignEnd="@+id/btnBusArrivalNext"
        android:contentDescription="@string/content_description_wheelchair" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivWheelchairSub"
        app:srcCompat="@drawable/wheelchair_accessibility_white"
        android:layout_alignTop="@+id/ivWheelchairNext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/content_description_wheelchair" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_time_placeholder"
        android:gravity="center"
        android:id="@+id/btnBusArrivalNow"
        android:layout_alignBaseline="@+id/btnBusArrivalNext"
        android:layout_alignBottom="@+id/btnBusArrivalNext"
        android:layout_toLeftOf="@+id/btnBusArrivalNext"
        android:layout_toStartOf="@+id/btnBusArrivalNext"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivWheelchairNow"
        app:srcCompat="@drawable/wheelchair_accessibility_white"
        android:contentDescription="@string/content_description_wheelchair"
        android:layout_alignTop="@+id/ivWheelchairNext"
        android:layout_alignRight="@+id/btnBusArrivalNow"
        android:layout_alignEnd="@+id/btnBusArrivalNow" />
</RelativeLayout>